# openai-learning

./: .gitignore  README.md  chatGPT.py  chatbots.py  expanding.py  format.py  inferring.py  orderbot.py  product.py  products.py  proofread.py  pyproject.toml  requirements.txt  setup.py  starting.py  summarize.py  translate.py
