[project]
name = "learning_gpt_samples"
version = "0.0.1"
authors = [
  { name="Maya", email="dpnminh@gmail.com" },
]
description = "A set of example codes working with openAI"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["panel", "IPython", "os", "openai", "dotenv"]